--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4056,7 +4056,7 @@ Senseit:
 
 # Sony & Sony Ericsson (combined as they are mixed up)
 Sony:
-  regex: 'Sony(?: ?Ericsson)?|SGP|Xperia|([456]0[12]|701)SO|C1[569]0[45]|C2[01]0[45]|C230[45]|C530[236]|C550[23]|C6[56]0[236]|C6616|C68(?:0[26]|[34]3)|C69(?:0[236]|16|43)|D200[45]|D21(?:0[45]|14)|D22(?:0[236]|12|43)|D230[2356]|D240[36]|D25(?:02|33)|D510[236]|D530[36]|D5316|D5322|D5503|D58[03]3|D65(?:0[23]|43|63)|D66[03458]3|D66[14]6|D6708|E(?:20[0345]3|2006|210[45]|2115|2124|230[36]|2312|23[356]3|530[36]|53[3456]3|5506|55[356]3|56[46305][36]|58[02]3|65[35]3|66[0358]3|68[358]3)|I[34]312|I4332|F311[12356]|F331[13]|F321[12356]|F5[13]21|F5122|F813[12]|F833[12]|G312[135]|G311[26]|G322[136]|G3212|G331[123]|G3412|G3416|G342[136]|G823[12]|G834[123]|G8[14]4[12]|H(?:3113|3123|3133|3213|3223|3311|3321|4113|4133|4213|4233|4311|4331|4413|4433|82[167]6|83[12]4|8416|9436)|(?:WT|LT|SO|ST|SK|MK)[0-9]+[a-z]+[0-9]*(?: Build|\))|X?L39H|XM50[ht]|W960|portalmmm/2\.0 K|S3[69]h|SOL2[246]|SOV3[1-79]|SOV4[02]|X10[ia]v?|E1[05][ai]v?|MT[0-9]{2}[a-z]? Build|SO-0(?:[12]C|[345]D|[234]E|[1-5]F|[1234]G|[134]H|[1234]J|[1-4]K|1M|[12]L)|R800[aix]|J8270|J9110|J9210|J81[17]0|I[34]113|I3[12]23|I42[19]3|H9493|H8296|H8166|H4493|LiveWithWalkman|BRAVIA|SGP771|E3 Dual'
+  regex: 'Sony(?: ?Ericsson)?|SGP|Xperia|([456]0[12]|701)SO|C1[569]0[45]|C2[01]0[45]|C230[45]|C530[236]|C550[23]|C6[56]0[236]|C6616|C68(?:0[26]|[34]3)|C69(?:0[236]|16|43)|D200[45]|D21(?:0[45]|14)|D22(?:0[236]|12|43)|D230[2356]|D240[36]|D25(?:02|33)|D510[236]|D530[36]|D5316|D5322|D5503|D58[03]3|D65(?:0[23]|43|63)|D66[03458]3|D66[14]6|D6708|E(?:20[0345]3|2006|210[45]|2115|2124|230[36]|2312|23[356]3|530[36]|53[3456]3|5506|55[356]3|56[46305][36]|58[02]3|65[35]3|66[0358]3|68[358]3)|I[34]312|I4332|F311[12356]|F331[13]|F321[12356]|F5[13]21|F5122|F813[12]|F833[12]|G312[135]|G311[26]|G322[136]|G3212|G331[123]|G3412|G3416|G342[136]|G823[12]|G834[123]|G8[14]4[12]|H(?:3113|3123|3133|3213|3223|3311|3321|4113|4133|4213|4233|4311|4331|4413|4433|82[167]6|83[12]4|8416|9436)|(?:WT|LT|SO|ST|SK|MK)[0-9]+[a-z]+[0-9]*(?: Build|\))|X?L39H|XM50[ht]|W960|portalmmm/2\.0 K|S3[69]h|SOL2[246]|SOV3[1-9]|SOV4[0-2]|X10[ia]v?|E1[05][ai]v?|MT[0-9]{2}[a-z]? Build|SO-0(?:[12]C|[345]D|[234]E|[1-5]F|[1234]G|[134]H|[1234]J|[1-5]K|1M|[12]L)|R800[aix]|J8270|J9110|J9210|J81[17]0|I[34]113|I3[12]23|I42[19]3|H9493|H8296|H8166|H4493|LiveWithWalkman|BRAVIA|SGP771|E3 Dual'
   device: 'smartphone'
   models:
     # SONY ERICSSON: explicit smartphone models
@@ -4201,7 +4201,7 @@ Sony:
       model: 'Xperia V'
     - regex: '(?:Sony(?:Ericsson)?)?J9210'
       model: 'Xperia 5 Dual'
-    - regex: '(?:Sony(?:Ericsson)?)?(?:J8270|SO-01M)'
+    - regex: '(?:Sony(?:Ericsson)?)?(?:J8270|SO-01M|SOV41)'
       model: 'Xperia 5'
     - regex: '(?:Sony(?:Ericsson)?)?SOV42'
       model: 'Xperia 8'
@@ -4391,7 +4391,9 @@ Sony:
       model: 'Xperia XZ2'
     - regex: 'H8266'
       model: 'Xperia XZ2 Dual'
-    - regex: 'H8166'
+    - regex: 'SO-05K'
+      model: 'Xperia XZ2 Compact'
+    - regex: '(?:H8166|SOV38)[);/ ]'
       model: 'Xperia XZ2 Premium Dual'
     - regex: '(?:Sony(?:Ericsson)?)?(?:H(8416|9436|9493)|SO-01L|SOV39)'
       model: 'Xperia XZ3'
@@ -9824,7 +9826,7 @@ Siemens:
 
 # Samsung
 Samsung:
-  regex: 'SAMSUNG(?! ?Browser)|Maple |SC-(?:02[CH]|04E|01F)|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86[);/ ]|(?:OTV-)?SMT-E5015|ISW11SC|SCV4[13]|SCV3[1-9]|404SC'
+  regex: 'SAMSUNG(?! ?Browser)|Maple |SC-(?:02[CH]|04E|01F)|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86[);/ ]|(?:OTV-)?SMT-E5015|ISW11SC|SCV4[013]|SCV3[1-9]|404SC'
   device: 'smartphone'
   models:
     # explicit tv models
@@ -10578,7 +10580,7 @@ Samsung:
     - regex: '(?:SAMSUNG[- ])?SM-N950|SCV37'
       model: 'GALAXY Note 8'
       device: 'phablet'
-    - regex: '(?:SAMSUNG[- ])?SM-N960'
+    - regex: '(?:SAMSUNG[- ])?(?:SM-N960|SCV40)'
       model: 'GALAXY Note 9'
       device: 'phablet'
     - regex: '(?:SAMSUNG[- ])?SM-N970(?:0|8|9|D|F|J|K|L|S|U1|U|W8|X)'
@@ -11307,7 +11309,7 @@ Spice:
 
 # Sharp
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S3-SH|SH-Z(10|01)|SH-C02|605SH|70[12]SH|901SH|305SH|506SH|SHL22|SHV4[034]|SHV3[58]|FS80(?:1[08]|32|28|0[29])|TG-L900S)[);/ ]'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S3-SH|SH-Z(10|01)|SH-C02|605SH|70[12]SH|901SH|305SH|506SH|SHL22|SHV4[0346]|SHV3[58]|FS80(?:1[08]|32|28|0[29])|TG-L900S)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -11345,6 +11347,8 @@ Sharp:
       model: 'Aquos S Mini'
     - regex: '(?:FS8010|SH-M08|SHV43)[);/ ]'
       model: 'Aquos S2'
+    - regex: 'SHV46[);/ ]'
+      model: 'Aquos S3 Plus'
     - regex: 'SHV44[);/ ]'
       model: 'Aquos R3'
     - regex: 'FS8032[);/ ]'
