--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4056,7 +4056,7 @@ Senseit:
 
 # Sony & Sony Ericsson (combined as they are mixed up)
 Sony:
-  regex: 'Sony(?: ?Ericsson)?|SGP|Xperia|([456]0[12]|701)SO|C1[569]0[45]|C2[01]0[45]|C230[45]|C530[236]|C550[23]|C6[56]0[236]|C6616|C68(?:0[26]|[34]3)|C69(?:0[236]|16|43)|D200[45]|D21(?:0[45]|14)|D22(?:0[236]|12|43)|D230[2356]|D240[36]|D25(?:02|33)|D510[236]|D530[36]|D5316|D5322|D5503|D58[03]3|D65(?:0[23]|43|63)|D66[03458]3|D66[14]6|D6708|E(?:20[0345]3|2006|210[45]|2115|2124|230[36]|2312|23[356]3|530[36]|53[3456]3|5506|55[356]3|56[46305][36]|58[02]3|65[35]3|66[0358]3|68[358]3)|I[34]312|I4332|F311[12356]|F331[13]|F321[12356]|F5[13]21|F5122|F813[12]|F833[12]|G312[135]|G311[26]|G322[136]|G3212|G331[123]|G3412|G3416|G342[136]|G823[12]|G834[123]|G8[14]4[12]|H(?:3113|3123|3133|3213|3223|3311|3321|4113|4133|4213|4233|4311|4331|4413|4433|82[167]6|83[12]4|8416|9436)|(?:WT|LT|SO|ST|SK|MK)[0-9]+[a-z]+[0-9]*(?: Build|\))|X?L39H|XM50[ht]|W960|portalmmm/2\.0 K|S3[69]h|SOL2[246]|SOV3[1-9]|SOV4[0-2]|X10[ia]v?|E1[05][ai]v?|MT[0-9]{2}[a-z]? Build|SO-0(?:[12]C|[345]D|[234]E|[1-5]F|[1234]G|[134]H|[1234]J|[1-5]K|1M|[12]L)|R800[aix]|J8270|J9110|J9210|J81[17]0|I[34]113|I3[12]23|I42[19]3|H9493|H8296|H8166|H4493|LiveWithWalkman|BRAVIA|SGP771|E3 Dual'
+  regex: 'Sony(?: ?Ericsson)?|SGP|Xperia|(?:[4-9]0[12])SO|C1[569]0[45]|C2[01]0[45]|C230[45]|C530[236]|C550[23]|C6[56]0[236]|C6616|C68(?:0[26]|[34]3)|C69(?:0[236]|16|43)|D200[45]|D21(?:0[45]|14)|D22(?:0[236]|12|43)|D230[2356]|D240[36]|D25(?:02|33)|D510[236]|D530[36]|D5316|D5322|D5503|D58[03]3|D65(?:0[23]|43|63)|D66[03458]3|D66[14]6|D6708|E(?:20[0345]3|2006|210[45]|2115|2124|230[36]|2312|23[356]3|530[36]|53[3456]3|5506|55[356]3|56[46305][36]|58[02]3|65[35]3|66[0358]3|68[358]3)|I[34]312|I4332|F311[12356]|F331[13]|F321[12356]|F5[13]21|F5122|F813[12]|F833[12]|G312[135]|G311[26]|G322[136]|G3212|G331[123]|G3412|G3416|G342[136]|G823[12]|G834[123]|G8[14]4[12]|H(?:3113|3123|3133|3213|3223|3311|3321|4113|4133|4213|4233|4311|4331|4413|4433|82[167]6|83[12]4|8416|9436)|(?:WT|LT|SO|ST|SK|MK)[0-9]+[a-z]+[0-9]*(?: Build|\))|X?L39H|XM50[ht]|W960|portalmmm/2\.0 K|S3[69]h|SOL2[246]|SOV3[1-9]|SOV4[0-2]|X10[ia]v?|E1[05][ai]v?|MT[0-9]{2}[a-z]? Build|SO-0(?:[12]C|[345]D|[234]E|[1-5]F|[1234]G|[134]H|[1234]J|[1-5]K|1M|[1-3]L)|R800[aix]|J8270|J9110|J9210|J81[17]0|I[34]113|I3[12]23|I42[19]3|H9493|H8296|H8166|H4493|LiveWithWalkman|BRAVIA|SGP771|E3 Dual'
   device: 'smartphone'
   models:
     # SONY ERICSSON: explicit smartphone models
@@ -4194,7 +4194,7 @@ Sony:
       model: 'Xperia 10'
     - regex: '(?:Sony(?:Ericsson)?)?I(?:42[19]3|3223)'
       model: 'Xperia 10 Plus'
-    - regex: '(?:Sony(?:Ericsson)?)?(?:J(?:9110|81[17]0)|SOV40)'
+    - regex: '(?:Sony(?:Ericsson)?)?(?:J(?:9110|81[17]0)|SOV40|SO-03L)'
       model: 'Xperia 1'
     - regex: '(?:Sony(?:Ericsson)?)?LT22i'
       model: 'Xperia P'
@@ -4202,7 +4202,7 @@ Sony:
       model: 'Xperia V'
     - regex: '(?:Sony(?:Ericsson)?)?J9210'
       model: 'Xperia 5 Dual'
-    - regex: '(?:Sony(?:Ericsson)?)?(?:J8270|SO-01M|SOV41)'
+    - regex: '(?:Sony(?:Ericsson)?)?(?:J8270|SO-01M|SOV41|901SO)'
       model: 'Xperia 5'
     - regex: '(?:Sony(?:Ericsson)?)?SOV42'
       model: 'Xperia 8'
@@ -4388,7 +4388,7 @@ Sony:
       model: 'Xperia XZs'
     - regex: '(?:Sony(?:Ericsson)?)?G814[12]|SO-04[JK]'
       model: 'Xperia XZ Premium'
-    - regex: '(?:Sony(?:Ericsson)?)?(?:H83[12]4|H82[17]6|SOV37|SO-03K|H8296)'
+    - regex: '(?:Sony(?:Ericsson)?)?(?:H83[12]4|H82[17]6|SOV37|SO-03K|H8296|702SO)'
       model: 'Xperia XZ2'
     - regex: 'H8266'
       model: 'Xperia XZ2 Dual'
@@ -4396,7 +4396,7 @@ Sony:
       model: 'Xperia XZ2 Compact'
     - regex: '(?:H8166|SOV38)[);/ ]'
       model: 'Xperia XZ2 Premium Dual'
-    - regex: '(?:Sony(?:Ericsson)?)?(?:H(8416|9436|9493)|SO-01L|SOV39)'
+    - regex: '(?:Sony(?:Ericsson)?)?(?:H(8416|9436|9493)|SO-01L|SOV39|801SO)'
       model: 'Xperia XZ3'
     - regex: '(?:Sony(?:Ericsson)?)?G331[13]'
       model: 'Xperia L1'
@@ -4789,71 +4789,76 @@ FNB:
 
 # Fujitsu
 Fujitsu:
-  regex: '(?:F-01[FHJK]|F-02[EFGH]|F-03[DEFGH]|F-04[EGK]|F-05[DEFJ]|F-06E|F-07[DE]|F-08D|F-09[DE]|F-10D|F-11D|F-12C|M532|FARTM933KZ|901FJ)[);/ ]'
+  regex: '(?:F-01[FHJK]|F-02[EFGHLK]|F-03[DEFGH]|F-04[EGK]|F-05[DEFJ]|F-06E|F-07[DE]|F-08D|F-09[DE]|F-10D|F-11D|F-12C|M532|FARTM933KZ|901FJ)[);/ ]'
   device: 'smartphone'
   models:
-    - regex: 'F-01F'
+    - regex: 'F-01F[);/ ]'
       model: 'Arrows NX F-01F'
-    - regex: 'F-01J'
+    - regex: 'F-01J[);/ ]'
       model: 'Arrows NX F-01J'
-    - regex: 'F-01K'
+    - regex: 'F-01K[);/ ]'
       model: 'Arrows NX F-01K'
-    - regex: 'F-01H'
+    - regex: 'F-01H[);/ ]'
       model: 'Arrows Fit F-01H'
-    - regex: 'F-02E'
+    - regex: 'F-02E[);/ ]'
       model: 'Arrows X F-02E'
-    - regex: 'F-02G'
+    - regex: 'F-02G[);/ ]'
       model: 'Arrows NX F-02G'
-    - regex: 'F-02H'
+    - regex: 'F-02H[);/ ]'
       model: 'Arrows NX F-02H'
-    - regex: 'F-03D'
+    - regex: 'F-03D[);/ ]'
       model: 'Arrows Kiss F-03D'
-    - regex: 'F-03E'
+    - regex: 'F-03E[);/ ]'
       model: 'Arrows Kiss F-03E'
-    - regex: 'F-03F'
+    - regex: 'F-03F[);/ ]'
       model: 'Disney Mobile F-03F'
-    - regex: 'F-03H'
+    - regex: 'F-03H[);/ ]'
       model: 'Arrows SV F-03H'
-    - regex: '901FJ'
+    - regex: '901FJ[);/ ]'
       model: 'Arrows J 901FJ'
-    - regex: 'F-04E'
+    - regex: 'F-04E[);/ ]'
       model: 'Arrows V F-04E'
-    - regex: 'F-04G'
+    - regex: 'F-04G[);/ ]'
       model: 'Arrows NX F-04G'
-    - regex: 'F-05D'
+    - regex: 'F-05D[);/ ]'
       model: 'Arrows X LTE F-05D'
-    - regex: 'F-05F'
+    - regex: 'F-05F[);/ ]'
       model: 'Arrows NX F-05F'
-    - regex: 'F-05J'
+    - regex: 'F-05J[);/ ]'
       model: 'Arrows Be F-05J'
-    - regex: 'F-04K'
+    - regex: 'F-04K[);/ ]'
       model: 'Arrows Be F-04K'
-    - regex: 'F-06E'
+    - regex: 'F-02L[);/ ]'
+      model: 'Arrows Be 3 F-02L'
+    - regex: 'F-06E[);/ ]'
       model: 'Arrows NX F-06E'
-    - regex: 'F-07D'
+    - regex: 'F-07D[);/ ]'
       model: 'Arrows μ F-07D'
-    - regex: 'F-07E'
+    - regex: 'F-07E[);/ ]'
       model: 'Disney Mobile F-07E'
-    - regex: 'F-08D'
+    - regex: 'F-08D[);/ ]'
       model: 'Disney Mobile F-08D'
-    - regex: 'F-09D'
+    - regex: 'F-09D[);/ ]'
       model: 'ANTEPRIMA F-09D'
-    - regex: 'F-09E'
+    - regex: 'F-09E[);/ ]'
       model: 'Raku-Raku Smartphone Premium F-09E'
-    - regex: 'F-10D'
+    - regex: 'F-10D[);/ ]'
       model: 'Arrows X F-10D'
-    - regex: 'F-11D'
+    - regex: 'F-11D[);/ ]'
       model: 'Arrows Me F-11D'
-    - regex: 'F-12C'
+    - regex: 'F-12C[);/ ]'
       model: 'F-12C'
 
-    - regex: 'F-02F'
+    - regex: 'F-02F[);/ ]'
       model: 'Arrows Tab F-02F'
       device: 'tablet'
-    - regex: 'F-03G'
+    - regex: 'F-02K[);/ ]'
+      model: 'Arrows Tab F-02K'
+      device: 'tablet'
+    - regex: 'F-03G[);/ ]'
       model: 'Arrows Tab F-03G'
       device: 'tablet'
-    - regex: 'F-05E'
+    - regex: 'F-05E[);/ ]'
       model: 'Arrows Tab F-05E'
       device: 'tablet'
     - regex: 'FARTM933KZ'
@@ -6815,7 +6820,7 @@ K-Touch:
 
 # kyocera (kyocera.co.jp, kyocera.com)
 Kyocera:
-  regex: 'Kyocera|KWC-|QC-|(?:602KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV3[35]|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U|KYV4[125]|KYV47-u)[;/) ]'
+  regex: 'Kyocera|KWC-|QC-|(?:602KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV3[3-5]|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U|KYV4[125]|KYV47-u)[;/) ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -6873,6 +6878,8 @@ Kyocera:
       model: 'Urbano L02'
     - regex: 'KYY23[;/) ]'
       model: 'Urbano L03'
+    - regex: 'KYV34[;/) ]'
+      model: 'Urbano V02'
     - regex: 'KYV45[;/) ]'
       model: 'Urbano V03'
     - regex: '(?:Kyocera-)?E6790'
@@ -7405,7 +7412,7 @@ Lexibook:
 
 # LG
 LG:
-  regex: 'LG|portalmmm/2\.0 (?:KE|KG|KP|L3)|(?:VX[0-9]+|L-0[12]D|L-07C|P713|(LM-[A-Z][0-9]{3}[A-Z]{0,3}(?:\(FGN?\)|\(G\)|\.FN|\.F(?:GN?)?)?)|LM-(X625N1|G820QM[0127]))[);/ ]|NetCast|RS98[78]|RS500|VS(?:50[01]|835|876|880|98[0578]|99[56]|(410|415|425|500|880)PP)|Nexsus 5|LML(41[34]D|211B|713D|212V)L|VK810 4G|VK815|X5-LG'
+  regex: 'LG|portalmmm/2\.0 (?:KE|KG|KP|L3)|(?:VX[0-9]+|L-0[12]D|L-07C|P713|(LM-[A-Z][0-9]{3}[A-Z]{0,3}(?:\(FGN?\)|\(G\)|\.FN|\.F(?:GN?)?)?)|LM-(X625N1|G820QM[0127]))[);/ ]|NetCast|RS98[78]|RS500|VS(?:50[01]|835|876|880|98[0578]|99[56]|(410|415|425|500|880)PP)|Nexsus 5|LML(41[34]D|211B|713D|212V)L|VK810 4G|VK815|X5-LG|L-03K|L-01[LK]'
   device: 'smartphone'
   models:
     - regex: 'LG-D325'
@@ -7480,6 +7487,10 @@ LG:
       model: 'Q9'
     - regex: 'LGV33[);/ ]'
       model: 'Qua Phone PX'
+    - regex: 'L-03K[);/ ]'
+      model: 'Style'
+    - regex: 'L-01L[);/ ]'
+      model: 'Style 2'
     - regex: 'VS835[);/ ]'
       model: 'Stylo 2 V'
     - regex: 'LM-Q710|LML713DL'
@@ -7556,6 +7567,8 @@ LG:
       model: 'V20'
     - regex: 'VS996'
       model: 'V30'
+    - regex: 'L-01K'
+      model: 'V30 Plus'
     - regex: '(?:LG-)?VS410PP'
       model: 'Optimus Zone'
     - regex: 'LM-V350[N]?'
@@ -9832,7 +9845,7 @@ Siemens:
 
 # Samsung
 Samsung:
-  regex: 'SAMSUNG(?! ?Browser)|Maple |SC-(?:02[CH]|04E|01F)|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86[);/ ]|(?:OTV-)?SMT-E5015|ISW11SC|SCV4[013]|SCV3[1-9]|404SC'
+  regex: 'SAMSUNG(?! ?Browser)|Maple |SC-(?:02[CH]|04E|01F)|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86[);/ ]|(?:OTV-)?SMT-E5015|ISW11SC|SCV4[0-3]|SCV3[1-9]|404SC'
   device: 'smartphone'
   models:
     # explicit tv models
@@ -10278,7 +10291,7 @@ Samsung:
       model: 'GALAXY S9+'
     - regex: '(?:SAMSUNG-)?(?:SM-G973|SCV41)'
       model: 'GALAXY S10'
-    - regex: '(?:SAMSUNG-)?SM-G975[0FUW]'
+    - regex: '(?:SAMSUNG-)?(?:SM-G975[0FUW]|SCV42)'
       model: 'GALAXY S10+'
     - regex: '(?:SAMSUNG-)?SM-G970[FU]'
       model: 'GALAXY S10e'
@@ -13636,7 +13649,7 @@ Zopo:
 
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N9180|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|Z3001S|KIS II Max|Kis 3|K3DX-V5G|Z930L|Blade (A5 2019-T|A6 MAX|A0622)|Nubia Z9|Ctyon-A9|602ZT)[);/ ]'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N9180|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|Z3001S|KIS II Max|Kis 3|K3DX-V5G|Z930L|Blade (A5 2019-T|A6 MAX|A0622)|Nubia Z9|Ctyon-A9|602ZT|MO-01J)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -13982,6 +13995,8 @@ ZTE:
       model: 'Adamant'
     - regex: 'Z936L[);/ ]'
       model: 'Lever'
+    - regex: 'MO-01J[);/ ]'
+      model: 'Mono'
 
     - regex: 'AxonPhone ([^;/]+) Build'
       model: 'AxonPhone $1'
